Update phone collection

--- a/market/src/app/home/home.component.html
+++ b/market/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Todays Deals</h1>
+  <h1 class="mat-h1">Sản phẩm</h1>
   <mat-grid-list cols="5" rowHeight="360px" gutterSize="20px">
     <mat-grid-tile *ngFor="let card of cards" [colspan]="card.cols" [rowspan]="card.rows">
       <!-- <mat-card class="dashboard-card card-image" [style.background-image]="getPhoneImage(card.imageName)">
