--- a/market/src/app/nav/nav.component.css
+++ b/market/src/app/nav/nav.component.css
@@ -26,6 +26,7 @@
 }
 
 .nav-title {
+  margin: 0 16px;
   display: flex;
   flex-direction: column;
   width: 80px;
@@ -36,4 +37,8 @@
   line-height: 80%;
   text-align: right;
   font-size: 10px;
+}
+
+.spacer {
+  flex: auto;
 }
