--- a/market/src/app/product-list/product-list.component.css
+++ b/market/src/app/product-list/product-list.component.css
@@ -3,6 +3,11 @@
   background-color: #eeeeee;
 }
 
+.title {
+  text-align: center;
+  font-weight: bolder;
+}
+
 /* .dashboard-card {
   position: absolute;
   top: 15px;
