--- a/market/src/app/about/about.component.html
+++ b/market/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="about-box">
     <h1>Nhóm 4 - DHTI14A1CL - UNETI</h1>
     <p>Trưởng nhóm: Nguyễn Kim Cương - Thiết kế Website (UI, Database)</p>
-    <p>Thành viên: Lê Minh Tuấn - Word, thuyết trình</p>
-    <p>Thành viên: Ngô Đình Phú</p>
+    <p>Thành viên: Lê Minh Tuấn - Word</p>
+    <p>Thành viên: Ngô Đình Phú - Thuyết trình</p>
 </div>
