--- a/market/src/app/product-detail/product-detail.component.html
+++ b/market/src/app/product-detail/product-detail.component.html
@@ -38,6 +38,10 @@
                                 </mat-button-toggle>
                             </mat-button-toggle-group>
                         </div>
+                        <br>
+                        <div class="card-info">
+                            <p>Có {{quantity}} sản phẩm trong kho.</p>
+                        </div>
                         <button class="purchase-btn" mat-raised-button color="primary" (click)="purchase()">Mua sản phẩm</button>
                     </td>
                 </tr>
