--- a/market/src/app/product-detail/product-detail.component.html
+++ b/market/src/app/product-detail/product-detail.component.html
@@ -42,7 +42,7 @@
                         <div class="card-info">
                             <p>Có {{quantity}} sản phẩm trong kho.</p>
                         </div>
-                        <button class="purchase-btn" mat-raised-button color="primary" (click)="purchase()">Mua sản phẩm</button>
+                        <button class="purchase-btn" mat-raised-button color="primary" (click)="addToCart()">Thêm vào giỏ hàng</button>
                     </td>
                 </tr>
             </table>
